--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
+   
+<img src="imagenes/Rick_and_Morty.svg (1).png" alt="centered image" height= "200" >
   </head>
   <body>
+  
     <div id="root"></div>
+    
     <script src="main.js" type="module"></script>
   </body>
 </html>
