Agrego cambios y diseno responsive para HU1

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />   
-<img src="imagenes/Rick_and_Morty.svg (1).png" alt="centered image" height= "150" >
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+
   </head>
   <body>
-  
+    <div class="photo-container">
+      <img id="img1" src="imagenes/Rick_and_Morty.svg (1).png" alt="centered image" height= "150" />
+    </div>
     <div id="root"></div>
     
     <script src="main.js" type="module"></script>
