Agregado filtro specie

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,71 @@
     <div class="photo-container">
       <img id="img1" src="imagenes/Rick_and_Morty.svg (1).png" alt="centered image" height= "150" />
     </div>
+    <form>
+    <p>
+      <label for="episodes">Selecciona un episodio</label>
+      <select id="episodes" >
+        <option>Episodios</option>
+        <option value="ep1">Episodio 1</option>
+        <option value="ep2">Episodio 2</option>
+        <option value="ep3">Episodio 3</option>
+        <option value="ep4">Episodio 4</option>
+        <option value="ep5">Episodio 5</option>
+        <option value="ep6">Episodio 6</option>
+        <option value="ep7">Episodio 7</option>
+        <option value="ep8">Episodio 8</option>
+        <option value="ep9">Episodio 9</option>
+        <option value="ep10">Episodio 10</option>
+        <option value="ep11">Episodio 11</option>
+        <option value="ep12">Episodio 12</option>
+        <option value="ep13">Episodio 13</option>
+        <option value="ep14">Episodio 14</option>
+        <option value="ep15">Episodio 15</option>
+        <option value="ep16">Episodio 16</option>
+        <option value="ep17">Episodio 17</option>
+        <option value="ep18">Episodio 18</option>
+        <option value="ep19">Episodio 19</option>
+        <option value="ep20">Episodio 20</option>
+        <option value="ep21">Episodio 21</option>
+        <option value="ep22">Episodio 22</option>
+        <option value="ep23">Episodio 23</option>
+        <option value="ep24">Episodio 24</option>
+        <option value="ep25">Episodio 25</option>
+        <option value="ep26">Episodio 26</option>
+        <option value="ep27">Episodio 27</option>
+        <option value="ep28">Episodio 28</option>
+        <option value="ep29">Episodio 29</option>
+        <option value="ep30">Episodio 30</option>
+        <option value="ep31">Episodio 31</option>
+      </select>
+    </p>
+    <button id="btnSearch">Buscar</button>
+    </form>
+
+    <br>
+
+    <form>
+      <p>
+        <label for="species">Selecciona una especie</label>
+        <select id="species" >
+          <option disabled selected value>Especies</option>
+          <option value="Human">Human</option>
+          <option value="Alien">Alien</option>
+          <option value="Humanoid">Humanoid</option>
+          <option value="Poopybutthole">Poopybutthole</option>
+          <option value="Mytholog">Mytholog</option>
+          <option value="unknown">Unknown</option>
+          <option value="Animal">Animal</option>
+          <option value="Disease">Disease</option>
+          <option value="Robot">Robot</option>
+          <option value="Cronenberg">Cronenberg</option>
+          <option value="Vampire">Vampire</option>
+          <option value="Parasite">Parasite</option>
+        </select>
+      </p>
+      
+      </form>
+      <div id="prueba"></div>
     <div id="root"></div>
     
     <script src="main.js" type="module"></script>
