--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
         </form> 
       </div>
 
-      <table>
+      <!--<table>
         <thead>
           <tr>
             <button id="bton-calcular">calcular</button>
@@ -185,7 +185,7 @@
           <td>Episodio 2</td>
           <td></td>  
         </tr>
-      </table>
+      </table>-->
 
       <br />
       <div id="prueba"></div>
