modificado info presentacion personajes

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         />
 
         <ul>
-          <button id="recargar">Pagina Principal</button>
+          <button id="recargar">Inicio</button>
           <button id="orden">Ordenar A-Z</button>
         </ul>
       </div>
