tabla con num personajes x genero

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
         <ul>
           <button id="recargar">Inicio</button>
           <button id="orden">Ordenar A-Z</button>
+          <button id="stats">Estadistica</button>
         </ul>
       </div>
 
@@ -169,26 +170,10 @@
         </form> 
       </div>
 
-      <!--<table>
-        <thead>
-          <tr>
-            <button id="bton-calcular">calcular</button>
-            <th>Episodios</th>
-            <th>Cantidad de personajes</th> 
-          </tr>
-        </thead>
-        <tr>
-          <td>Episodio 1</td>     
-          <td></td>  
-        </tr>
-        <tr>
-          <td>Episodio 2</td>
-          <td></td>  
-        </tr>
-      </table>-->
-
-      <br />
+      <br>
+      
       <div id="prueba"></div>
+      <br>
       <div id="root"></div>
     </div>
 
