--- a/src/index.html
+++ b/src/index.html
@@ -23,112 +23,112 @@
         />
 
         <ul>
-          <button id="recargar">Inicio</button>
-          <button id="orden">Ordenar A-Z</button>
-          <button id="stats">Estadistica</button>
+          <button id="recargar">Reset</button>
+          <button id="orden">Sort A-Z</button>
+          <button id="stats">Stats</button>
         </ul>
       </div>
 
       <br />
       <div class="filter-elements">
-        <h2 id="text-filtros">Filtros</h2>
+        <h2 id="text-filtros">Filters</h2>
         <br />
         <form>
           <p>
             <select id="episodes" class="select-css">
-              <option disabled selected value>Episodio...</option>
+              <option disabled selected value>Episode...</option>
               <option value="https://rickandmortyapi.com/api/episode/1">
-                Episodio 1
+                Episode 1
               </option>
               <option value="https://rickandmortyapi.com/api/episode/2">
-                Episodio 2
+                Episode 2
               </option>
               <option value="https://rickandmortyapi.com/api/episode/3">
-                Episodio 3
+                Episode 3
               </option>
               <option value="https://rickandmortyapi.com/api/episode/4">
-                Episodio 4
+                Episode 4
               </option>
               <option value="https://rickandmortyapi.com/api/episode/5">
-                Episodio 5
+                Episode 5
               </option>
               <option value="https://rickandmortyapi.com/api/episode/6">
-                Episodio 6
+                Episode 6
               </option>
               <option value="https://rickandmortyapi.com/api/episode/7">
-                Episodio 7
+                Episode 7
               </option>
               <option value="https://rickandmortyapi.com/api/episode/8">
-                Episodio 8
+                Episode 8
               </option>
               <option value="https://rickandmortyapi.com/api/episode/9">
-                Episodio 9
+                Episode 9
               </option>
               <option value="https://rickandmortyapi.com/api/episode/10">
-                Episodio 10
+                Episode 10
               </option>
               <option value="https://rickandmortyapi.com/api/episode/11">
-                Episodio 11
+                Episode 11
               </option>
               <option value="https://rickandmortyapi.com/api/episode/12">
-                Episodio 12
+                Episode 12
               </option>
               <option value="https://rickandmortyapi.com/api/episode/13">
-                Episodio 13
+                Episode 13
               </option>
               <option value="https://rickandmortyapi.com/api/episode/14">
-                Episodio 14
+                Episode 14
               </option>
               <option value="https://rickandmortyapi.com/api/episode/15">
-                Episodio 15
+                Episode 15
               </option>
               <option value="https://rickandmortyapi.com/api/episode/16">
-                Episodio 16
+                Episode 16
               </option>
               <option value="https://rickandmortyapi.com/api/episode/17">
-                Episodio 17
+                Episode 17
               </option>
               <option value="https://rickandmortyapi.com/api/episode/18">
-                Episodio 18
+                Episode 18
               </option>
               <option value="https://rickandmortyapi.com/api/episode/19">
-                Episodio 19
+                Episode 19
               </option>
               <option value="https://rickandmortyapi.com/api/episode/20">
-                Episodio 20
+                Episode 20
               </option>
               <option value="https://rickandmortyapi.com/api/episode/21">
-                Episodio 21
+                Episode 21
               </option>
               <option value="https://rickandmortyapi.com/api/episode/22">
-                Episodio 22
+                Episode 22
               </option>
               <option value="https://rickandmortyapi.com/api/episode/23">
-                Episodio 23
+                Episode 23
               </option>
               <option value="https://rickandmortyapi.com/api/episode/24">
-                Episodio 24
+                Episode 24
               </option>
               <option value="https://rickandmortyapi.com/api/episode/25">
-                Episodio 25
+                Episode 25
               </option>
               <option value="https://rickandmortyapi.com/api/episode/26">
-                Episodio 26
+                Episode 26
               </option>
               <option value="https://rickandmortyapi.com/api/episode/27">
-                Episodio 27
+                Episode 27
               </option>
               <option value="https://rickandmortyapi.com/api/episode/28">
-                Episodio 28
+                Episode 28
               </option>
               <option value="https://rickandmortyapi.com/api/episode/29">
-                Episodio 29
+                Episode 29
               </option>
               <option value="https://rickandmortyapi.com/api/episode/30">
-                Episodio 30
+                Episode 30
               </option>
               <option value="https://rickandmortyapi.com/api/episode/31">
-                Episodio 31
+                Episode 31
               </option>
             </select>
           </p>
@@ -139,7 +139,7 @@
         <form>
           <p>
             <select id="species" class="select-css">
-              <option disabled selected value>Especie...</option>
+              <option disabled selected value>Specie...</option>
               <option value="Human">Human</option>
               <option value="Alien">Alien</option>
               <option value="Humanoid">Humanoid</option>
@@ -161,9 +161,9 @@
         <form>
           <p>
             <select id="status" class="select-css">
-              <option disabled selected value>Estado...</option>
+              <option disabled selected value>Status...</option>
               <option value="Alive">Alive</option>
-              <option value="unknown">unknown</option>
+              <option value="unknown">Unknown</option>
               <option value="Dead">Dead</option>
             </select>
           </p>
